testing app in coat geonode

--- a/coat_geonode/templates/site_base.html
+++ b/coat_geonode/templates/site_base.html
@@ -6,15 +6,7 @@
     <li id="nav_metadata">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Metadata<i class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url "layer_browse" %}">Metadata List</a></li>
-              </ul>
-    </li>
-{% endblock %}
-{% block extra_tab_2 %}
-    <li id="nav_metadata">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Metadata<i class="fa fa-angle-down fa-lg"></i></a>
-              <ul class="dropdown-menu">
-                <li><a href="{% url "layer_browse" %}">Metadata List</a></li>
+                <li><a href="{% url "metadata_browse" %}">Metadata List</a></li>
               </ul>
     </li>
 {% endblock %}
