--- a/metadata/templates/metadata/metadata_list.html
+++ b/metadata/templates/metadata/metadata_list.html
@@ -3,14 +3,14 @@
 {% load staticfiles %}
 {% load url from future %}
 
-{% block title %} {% trans "Explore Layers" %} - {{ block.super }} {% endblock %}
+{% block title %} "Explore Metadata" - {{ block.super }} {% endblock %}
 
-{% block body_class %}layers explore{% endblock %}
+{% block body_class %}metadata explore{% endblock %}
 
 {% block body %}
 <div class="page-header">
-  <a href="{% url "layer_upload" %}" class="btn btn-primary pull-right">{% trans "Upload Layers" %}</a>
-  <h2 class="page-title">{% trans "Explore Layers" %}</h2>
+  <a href="{% url "layer_upload" %}" class="btn btn-primary pull-right">Add metadata</a>
+  <h2 class="page-title">Explore Metadata</h2>
 </div>
   {% with include_type_filter='true' %}
   {% with facet_type='layers' %}
