--- a/coat_geonode/templates/site_base.html
+++ b/coat_geonode/templates/site_base.html
@@ -1,12 +1,59 @@
 {% extends "base.html" %}
+{% load i18n avatar_tags %}
 {% block extra_head %}
       <link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
 {% endblock %}
-{% block extra_tab %}
-    <li id="nav_metadata">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Metadata<i class="fa fa-angle-down fa-lg"></i></a>
+
+
+ {% block tabs %}
+	        <li id="nav_layers">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Data" %}<i class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url "metadata_browse" %}">Metadata List</a></li>
+                <li><a href="{% url "layer_browse" %}">{% trans "Layers" %}</a></li>
+                <li><a href="{% url "document_browse" %}">{% trans "Documents" %}</a></li>
+                <li><a href="{% url "newdata_browse" %}">Newdata</a></li>
+                {% if user.is_authenticated %}
+                <li><a href="{% url "services" %}">{% trans "Remote Services" %}</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="{% url "layer_upload" %}">Upload Layer</a></li>
+                <li><a href="{% url "document_upload" %}">Upload Document</a></li>
+                <li><a href="{% url "register_service" %}">{% trans "Add Remote Service" %}</a></li>
+                {% endif %}
               </ul>
-    </li>
-{% endblock %}
+            </li>
+	        <li id="nav_maps">
+              {% if user.is_authenticated %}
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Maps" %}<i class="fa fa-angle-down fa-lg"></i></a>
+              <ul class="dropdown-menu">
+                <li><a href="{% url "maps_browse" %}">{% trans "Explore Maps" %}</a></li>
+                <li> <a href="{% url "new_map" %}">{% trans "Create Map" %}</a></li>
+              </ul>
+              {% else %}
+              <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
+              {% endif %}
+            </li>
+            <li>
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}<i class="fa fa-angle-down fa-lg"></i></a>
+              <ul class="dropdown-menu">
+                <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
+                <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
+                {% if perms.announcements.can_manage %}
+                <li><a href="{% url "announcements_list" %}">{% trans "Announcements" %}</a></li>
+                {% endif %}
+                {% if user.is_superuser %}
+                <li role="separator" class="divider"></li>
+                <li><a href="/admin/people/profile/add/">{% trans "Add User" %}</a></li>
+                <li><a href="{% url "account_invite_user" %}">{% trans "Invite User" %}</a></li>
+                <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
+                {% endif %}
+              </ul>
+            </li>
+	        {% block extra_tab %}
+                <li id="nav_metadata">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Metadata<i class="fa fa-angle-down fa-lg"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% url "metadata_browse" %}">Metadata List</a></li>
+                    </ul>
+                </li>
+            {% endblock %}
+ {% endblock %}
