--- a/newdata/templates/newdata/newdata_list.html
+++ b/newdata/templates/newdata/newdata_list.html
@@ -34,29 +34,49 @@
         <div class="row">
               <div class="col-md-12 grid-spacer">
 
-                    <ul>
+                    <dl>
                         {% for datatype in datatypes %}
                             <div class="col-lg-12 item-container">
 
                                 <div class="col-lg-12 profile-avatar">
                                     {{ datatype.type_name }}
-                                     <li><a href="{% url 'datatypesdetail' datatype.id %}">{{ datatype.type_name }}</a></li>
-                                </div>
+                                     <dt><a href="{% url 'datatypesdetail' datatype.id %}">{{ datatype.type_name }}</a></dt>
 
-                                <div class="col-lg-8 item-details">
-                                      <div class="row">
-                                        <div class="col-xs-10">
 
-                                        </div>
-                                        <div class="col-xs-2">
+                                    <div class="col-lg-8 item-details">
 
-                                        </div>
-                                      </div>
+                                            <div class="col-xs-10">
+                                                <div class="row">
+                                                    <div class="col-lg-12 item-items">
+                                                      <ul class="list-inline">
+
+                                                        <li><a href="/people/profile/{{ item.owner__username }}"><i class="fa fa-user"></i>{{ item.owner_name }}</a></li>
+                                                        <li><a href="{{ item.detail_url }}#info"><i class="fa fa-calendar-o"></i>{{ item.date|date:'d MMM y' }}</a></li>
+                                                        <li><a href="{{ item.detail_url }}"><i class="fa fa-eye"></i>{{ item.popular_count }}</a></li>
+                                                        <li><a href="{{ item.detail_url }}#share"><i class="fa fa-share"></i>{{ item.share_count }}</a></li>
+                                                        <li><a href="{{ item.detail_url }}#rate"><i class="fa fa-star"></i>{{ item.rating }}</a></li>
+                                                        <li><a ng-if="item.detail_url.indexOf('/layers/') > -1" href="{% url "new_map" %}?layer={{ item.detail_url }}">
+
+                                                          <i class="fa fa-map-marker"></i>{% trans "Create a Map" %}</a>
+
+                                                        </li>
+                                                        <li><a ng-if="item.detail_url.indexOf('/maps/') > -1" href="/maps/{{item.id}}/view"><i class="fa fa-map-marker"></i>View Map</a></li>
+                                                      </ul>
+                                                    </div>
+                                                  </div>
+
+                                            </div>
+                                            <div class="col-xs-2">
+
+                                            </div>
+
+                                    </div>
+
                                 </div>
 
                             </div>
                         {%  endfor %}
-                    </ul>
+                    </dl>
 
               </div>
         </div>
