--- a/newdata/templates/newdata/moth_detail.html
+++ b/newdata/templates/newdata/moth_detail.html
@@ -12,18 +12,70 @@
 {% block title %} Moth {% endblock %}
 
 
-
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 
 
 {% block body_outer %}
     {% include "newdata/newdata_ol3_map.html" %}
-<div class="row">
-  <div class="col-md-8">
 
-    <div id="embedded_map" class="mrg-btm">
-      <div id="preview_map"></div>
+<div class="row">
+    <div class="col-md-4">
+        <button onclick="filter_location('dåfjord');">dåfjord</button>
     </div>
-  </div>
+
+    <div class="col-md-8">
+        <!--<div class="col-8">
+            <div id="map">
+                <script type="text/javascript">
+
+                    function main_map_init(map, options) {
+                        var geojsonPointLayer = new L.GeoJSON.AJAX("{% url 'mothgeojson' %}", {
+                            onEachFeature:function(feature, layer) {
+                                layer.bindPopup(feature.properties.name.toString()+'<br><img src="'
+                                 + feature.properties.photo + '" /><br><a href="'+ feature.properties.institutional_link+'">Institution Link</a>'+
+                                '<br><a href='+ feature.properties.social_link.toString()+'>Social Link</a>');
+                            }
+                        });
+                        map.setView([63.43, 10.395], 5)
+                        geojsonPointLayer.addTo(map)
+                    }
+                </script>
+            </div>
+        </div>-->
+
+
+        <div id="embedded_map" class="mrg-btm">
+          <div id="preview_map"></div>
+        </div>
+    </div>
 </div>
+
+
+    <script>
+        function filter_location(location) {
+            $.ajax({
+                type: "POST",
+                url: location+'/',
+                dataType: 'json',
+                success: function (response) {
+                        alert(response.features[1].properties['waypoint_name']);
+                     }
+            });
+        }
+    </script>
+<!--
+    <script>
+        function filter_location(location) {
+            $.get(location+'/', function (data) {
+                alert("waypoints filtered!");
+                alert(response.content);
+            });
+        }
+    </script>
+-->
+    <div class="col-md-4">
+        <button onclick="filter_location('dåfjord');">dåfjord</button>
+    </div>
+
 {% endblock %}
