--- a/newdata/templates/newdata/newdata_ol3_map.html
+++ b/newdata/templates/newdata/newdata_ol3_map.html
@@ -4,7 +4,7 @@
 
 document.addEventListener("DOMContentLoaded", function(event) {
 
-  	document.getElementById('preview_map').setAttribute("style", "height:600px");
+  	document.getElementById('preview_map').setAttribute("style", "height:500px");
 
   	source = null;
 
@@ -12,27 +12,29 @@ document.addEventListener("DOMContentLoaded", function(event) {
 
     var coordinates = [24, 70.6]
   	var lonlat = ol.proj.transform(coordinates, 'EPSG:4326', 'EPSG:3857')
-    var lon = lonlat[0]
-    var lat = lonlat[1]
-    var location = 'dåfjord'
+    lon = lonlat[0]
+    lat = lonlat[1]
+
+
 
   	var layers = [
         	new ol.layer.Tile({
             	source: new ol.source.OSM()
           	}),
-            new ol.layer.Vector({
+            waypoints_layer = new ol.layer.Vector({
                 source: new ol.source.Vector({
                     url: "{% url 'mothgeojson' %}",
                     format: new ol.format.GeoJSON({
                         defaultDataProjection:  'EPSG:4326',
                         projection: 'EPSG:3857'
-                    })
+                    }),
+                    name: 'waypoints_layer'
                 }),
             }),
 
     ];
 
-    var map = new ol.Map({
+    map = new ol.Map({
                 layers: layers,
                 target: 'preview_map',
                 view: new ol.View({
