--- a/newdata/templates/newdata/moth_detail.html
+++ b/newdata/templates/newdata/moth_detail.html
@@ -55,6 +55,15 @@
 
                         map.addLayer(waypoints_layer);
 
+                       div = document.getElementById('waypoints');
+                       div.innerHTML = '';
+                       for (i = 0; i < features.length; i++) {
+                           var newdiv = document.createElement('div');
+                           div.appendChild(newdiv);
+                           newdiv.innerHTML = '<button class="btn btn-default btn-block">' + response.features[i].properties['waypoint_name'] + '</button>'
+
+                       }
+
 
                 }
             });
@@ -68,11 +77,11 @@
         <div class="col-md-2">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="">Hello.</h3>
+                    <h3 class="">Locations</h3>
                 </div>
                  {% for loc in mothloc %}
                     <div>
-                        <button onclick="filter_location('{{ loc }}');">{{ loc }}  </button>
+                        <button onclick="filter_location('{{ loc }}');" class="btn btn-default btn-block">{{ loc }}  </button>
                     </div>
                  {% endfor %}
             </div>
@@ -80,7 +89,7 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="">Hello.</h3>
+                    <h3 class="">Map</h3>
                 </div>
 
                 <div id="embedded_map" class="mrg-btm">
@@ -92,13 +101,12 @@
         <div class="col-md-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="">Hello.</h3>
+                    <h3 class="">Waypoints</h3>
                 </div>
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra
-                    varius quam sit amet vulputate. Quisque mauris augue, molestie tincidunt
-                    condimentum vitae, gravida a libero. Aenean sit amet felis dolor, in sagittis
-                    nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor
-                    accumsan. Aliquam in felis sit amet augue.</div>
+
+                <div id="waypoints">
+                </div>
+
             </div>
         </div>
     </div>
