--- a/newdata/templates/newdata/moth_detail.html
+++ b/newdata/templates/newdata/moth_detail.html
@@ -28,41 +28,38 @@
                 dataType: 'json',
                 success: function (response) {
 
-                        new_lon = response.features[1].properties['lon'];
-                        new_lat = response.features[1].properties['lat'];
 
-                        var features = geojsonFormat.readFeatures(response,
-                            {featureProjection:"EPSG:3857"});
+                    ways = response['way'];
+                    records = response['rec'];
+
+                    new_features = geojsonFormat.readFeatures(ways,
+                        {featureProjection:"EPSG:3857"});
+
+                    var y = new_features[0].get('lat');
+                    var x = new_features[0].get('lon');
+                    var coordinates = [x, y]
+                    var lonlat = ol.proj.transform(coordinates, 'EPSG:4326', 'EPSG:3857')
+                    new_lon = lonlat[0]
+                    new_lat = lonlat[1]
+
+                    layersource = waypoints_layer.getSource()
+                    layersource.forEachFeature(function(feature){
+                        layersource.removeFeature(feature)
+                    });
+
+                    layersource.addFeatures(new_features)
+                    map.getView().setCenter([new_lon, new_lat])
 
 
 
-                        layersource = waypoints_layer.getSource()
-                        layersource.forEachFeature(function(feature){
-                           layersource.removeFeature(feature)
-                        });
+                    div = document.getElementById('waypoints');
+                    div.innerHTML = '';
+                    for (i = 0; i < new_features.length; i++) {
+                        var newdiv = document.createElement('div');
+                        div.appendChild(newdiv);
+                        newdiv.innerHTML = '<button class="btn btn-default btn-block">' + new_features[i].get('waypoint_name') + '</button>'
 
-                        layersource.set('url', this.url);
-
-                        waypoints_layer= new ol.layer.Vector({
-                            source: new ol.source.Vector({
-                                url: this.url,
-                                format: new ol.format.GeoJSON({
-                                projection: 'EPSG:3857'
-                                }),
-                        name: 'waypoints_layer_updated'
-                            })
-                        });
-
-                        map.addLayer(waypoints_layer);
-
-                       div = document.getElementById('waypoints');
-                       div.innerHTML = '';
-                       for (i = 0; i < features.length; i++) {
-                           var newdiv = document.createElement('div');
-                           div.appendChild(newdiv);
-                           newdiv.innerHTML = '<button class="btn btn-default btn-block">' + response.features[i].properties['waypoint_name'] + '</button>'
-
-                       }
+                    }
 
 
                 }
@@ -146,6 +143,8 @@
 
 
 <!--
+
+ layersource.set('url', this.url);
 alert(this.url);
 alert(response.features[1].properties['waypoint_name']);
 
